--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
   <head>
     <meta charset="utf-8">
     <title>xianhuawang_demo</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="static/index.css">
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script type="text/javascript">
+    function changeREM(){
+        if(document.body.offsetX >= 540){
+            document.documentElement.style.fontSize = '54px';
+        }else{
+            document.documentElement.style.fontSize = document.body.offsetX/10;
+        } 
+    }
+    changeREM();
+    window.onresize = changeREM;
+  </script>
 </html>
